--- a/index.html
+++ b/index.html
@@ -1,74 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>programation orionte objet </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"
+  />
+  <title>Shopping Cart</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>projet chek point</h1>
-        
-     <script>
-        class Product {
-            constructor(id, name, price) {
-                this.id = id;
-                this.name = name;
-                this.price = price;
-            }
-        }
-
-        class ShoppingCartItem {
-            constructor(product, quantity) {
-                this.product = product;
-                this.quantity = quantity;
-            }
-
-            totalPrice() {
-                return this.product.price * this.quantity;
-            }
-        }
-
-        class ShoppingCart {
-            constructor() {
-                this.items = [];
-            }
-
-            addItem(product, quantity) {
-                const item = new ShoppingCartItem(product, quantity);
-                this.items.push(item);
-            }
-
-            removeItem(productId) {
-                this.items = this.items.filter(item => item.product.id !== productId);
-            }
-
-            getTotal() {
-                return this.items.reduce((total, item) => total + item.totalPrice(), 0);
-            }
-
-            displayCartItems() {
-                this.items.forEach(item => {
-                    console.log(`${item.product.name} (x${item.quantity}): $${item.totalPrice()}`);
-                });
-            }
-        }
-
-        // Tester le panier
-        const product1 = new Product(1, "Laptop", 1000);
-        const product2 = new Product(2, "Phone", 500);
-
-        const cart = new ShoppingCart();
-
-        cart.addItem(product1, 2);  
-        cart.addItem(product2, 1);
-
-        cart.displayCartItems(); 
-        console.log(`Total: $${cart.getTotal()}`);  
-
-        cart.removeItem(1);  
-
-        cart.displayCartItems();
-        console.log(`Total après suppression: $${cart.getTotal()}`);
-    </script>
+  <div class="shopping-cart">
+    <h1>Shopping Cart</h1>
+    <div class="cart-items">
+      <!-- Les éléments du panier seront injectés ici via JavaScript -->
+    </div>
+    <div class="cart-footer">
+      <h2 class="total-price">Total: $0.00</h2>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
